gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/union_initialization.d
version https://git-lfs.github.com/spec/v1
oid sha256:55208f40dfdabb5849aa17b93b43c61cedda422c24800fc7a94797adc51fb79f
size 1347
